--- a/javadoc_library.gradle
+++ b/javadoc_library.gradle
@@ -17,24 +17,24 @@ android.libraryVariants.all { variant ->
         return; // Skip non-release builds.
     }
     task("generateJavadoc", type: Javadoc) {
-        description = "Generates Javadoc for the ${javadocTitle}."
-        title = "ExoPlayer ${javadocTitle}"
-        source = variant.javaCompile.source
-        classpath = files(variant.javaCompile.classpath.files,
-	                  project.android.getBootClasspath())
-        options {
-            links "http://docs.oracle.com/javase/7/docs/api/"
-            linksOffline "https://developer.android.com/reference",
-                         "${android.sdkDirectory}/docs/reference"
-            encoding = "UTF-8"
-        }
-        exclude "**/BuildConfig.java"
-        exclude "**/R.java"
-        doLast {
-            copy {
-                from "src/main/javadoc"
-                into "$buildDir/docs/javadoc"
-            }
-        }
+//        description = "Generates Javadoc for the ${javadocTitle}."
+//        title = "ExoPlayer ${javadocTitle}"
+//        source = variant.javaCompile.source
+//        classpath = files(variant.javaCompile.classpath.files,
+//	                  project.android.getBootClasspath())
+//        options {
+//            links "http://docs.oracle.com/javase/7/docs/api/"
+//            linksOffline "https://developer.android.com/reference",
+//                         "${android.sdkDirectory}/docs/reference"
+//            encoding = "UTF-8"
+//        }
+//        exclude "**/BuildConfig.java"
+//        exclude "**/R.java"
+//        doLast {
+//            copy {
+//                from "src/main/javadoc"
+//                into "$buildDir/docs/javadoc"
+//            }
+//        }
     }
 }
