fix gradle warnings
- replace compile with api/implementation
- refer to version numbers from root project

--- a/extensions/flac/build.gradle
+++ b/extensions/flac/build.gradle
@@ -15,12 +15,12 @@ apply from: '../../constants.gradle'
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion project.ext.compileSdkVersion
-    buildToolsVersion project.ext.buildToolsVersion
+    compileSdkVersion rootProject.compileSDK
+    buildToolsVersion rootProject.buildTools
 
     defaultConfig {
-        minSdkVersion project.ext.minSdkVersion
-        targetSdkVersion project.ext.targetSdkVersion
+        minSdkVersion rootProject.minSDK
+        targetSdkVersion rootProject.targetSDK
         consumerProguardFiles 'proguard-rules.txt'
     }
 
@@ -31,8 +31,8 @@ android {
 }
 
 dependencies {
-    compile project(modulePrefix + 'library-core')
-    androidTestCompile project(modulePrefix + 'testutils')
+    implementation project(modulePrefix + 'library-core')
+    androidTestImplementation project(modulePrefix + 'testutils')
 }
 
 ext {
