--- a/extensions/okhttp/build.gradle
+++ b/extensions/okhttp/build.gradle
@@ -15,12 +15,12 @@ apply from: '../../constants.gradle'
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion project.ext.compileSdkVersion
-    buildToolsVersion project.ext.buildToolsVersion
+    compileSdkVersion rootProject.compileSDK
+    buildToolsVersion rootProject.buildTools
 
     defaultConfig {
-        minSdkVersion project.ext.minSdkVersion
-        targetSdkVersion project.ext.targetSdkVersion
+        minSdkVersion rootProject.minSDK
+        targetSdkVersion rootProject.targetSDK
     }
 
     lintOptions {
@@ -30,8 +30,8 @@ android {
 }
 
 dependencies {
-    compile project(modulePrefix + 'library-core')
-    compile('com.squareup.okhttp3:okhttp:3.9.0') {
+    implementation project(modulePrefix + 'library-core')
+    implementation('com.squareup.okhttp3:okhttp:3.9.0') {
         exclude group: 'org.json'
     }
 }
