--- a/extensions/opus/build.gradle
+++ b/extensions/opus/build.gradle
@@ -15,12 +15,12 @@ apply from: '../../constants.gradle'
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion project.ext.compileSdkVersion
-    buildToolsVersion project.ext.buildToolsVersion
+    compileSdkVersion rootProject.compileSDK
+    buildToolsVersion rootProject.buildTools
 
     defaultConfig {
-        minSdkVersion project.ext.minSdkVersion
-        targetSdkVersion project.ext.targetSdkVersion
+        minSdkVersion rootProject.minSDK
+        targetSdkVersion rootProject.targetSDK
         consumerProguardFiles 'proguard-rules.txt'
     }
 
@@ -31,7 +31,7 @@ android {
 }
 
 dependencies {
-    compile project(modulePrefix + 'library-core')
+    implementation project(modulePrefix + 'library-core')
 }
 
 ext {
