--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,12 @@
 // WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 // See the License for the specific language governing permissions and
 // limitations under the License.
+// google must be in front of jcenter
+// https://stackoverflow.com/questions/50584437/android-studio-3-1-2-failed-to-resolve-runtime
 buildscript {
     repositories {
-        jcenter()
         google()
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0'
