--- a/testutils/build.gradle
+++ b/testutils/build.gradle
@@ -15,11 +15,24 @@ apply from: '../constants.gradle'
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion rootProject.compileSDK
+    compileSdkVersion project.ext.compileSdkVersion
+    buildToolsVersion project.ext.buildToolsVersion
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
     defaultConfig {
-        minSdkVersion rootProject.minSDK
-        targetSdkVersion rootProject.targetSDK
+        minSdkVersion project.ext.minSdkVersion
+        targetSdkVersion project.ext.targetSdkVersion
+    }
+
+    lintOptions {
+        // Truth depends on JUnit, which depends on java.lang.management, which
+        // is not part of Android. Remove this when JUnit 4.13 or later is used.
+        // See: https://github.com/junit-team/junit4/pull/1187.
+        disable 'InvalidPackage'
     }
 }
 
